# jellyfin-qbit-api

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  pyproject.toml
app/: main.py
app/core/: settings.py  torrents_status.py
app/jellyfin/: router.py  service.py
app/playback_sessions/: job.py  model.py  repository.py  router.py  schema.py  service.py
app/torrents/: router.py  service.py
app/users/: model.py  repository.py  router.py  service.py
app/utils/: db_session.py  jellyfin_client.py  qbit_client.py
